--- a/SearchIt.html
+++ b/SearchIt.html
@@ -26,7 +26,14 @@ localStorage.setItem("Version", eval(timesloadedvr.innerHTML));
 <script src="SearchIt.js"></script>
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 <script src='htttps://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2CKK0BM2T5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-2CKK0BM2T5');
+</script>
 </head>
 <body onerror="wrong()" onload="uptodate()">
 <div id="loading">
