--- a/SearchIt.html
+++ b/SearchIt.html
@@ -26,13 +26,13 @@ localStorage.setItem("Version", eval(timesloadedvr.innerHTML));
 <script src="SearchIt.js"></script>
 <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 <script src='htttps://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2CKK0BM2T5"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G3TVJX1MZP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2CKK0BM2T5');
+  gtag('config', 'G-G3TVJX1MZP');
 </script>
 </head>
 <body onerror="wrong()" onload="uptodate()">
