--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="theme-color" content="#0d9a94">
 <meta name="viewport" content="user-scalable=no">
+<meta name="google-site-verification" content="uqNabz4qB1Yri3nk3FCZW8gC3NBuaHv4dM_tsE6M2_8" />
 <title>Search It</title>
 <link rel="manifest" href="SearchIt.json">
 <link rel="shortcut icon" type="image/png" href="SearchIt.png">
